--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,13 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --principal: #e88a42;
+  --secundario: #171c35;
+  --terciario: #0e1023;
+  --white: #fff2e0;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
